tests/errors/regex-bad-count-modifier/main.pa
# A `{min,max}` repetition with max < min.
def main = `digit{2,1}`
